[gd_scene load_steps=14 format=2]

[ext_resource path="res://Scene/Obstacle/obstacle_tile_1.tres" type="TileSet" id=1]
[ext_resource path="res://Scene/Player/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scene/Game/Game.gd" type="Script" id=3]
[ext_resource path="res://Scene/Obstacle/Ground.tscn" type="PackedScene" id=4]
[ext_resource path="res://Font/editundo.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://Assets/Sprite/Background/Background0.png" type="Texture" id=6]

[sub_resource type="DynamicFont" id=6]
size = 30
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=7]
size = 30
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=4]
size = 30
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=3]
size = 30
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=1]
size = 60
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=8]
size = 60
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=5]
size = 40
font_data = ExtResource( 5 )

[node name="Game" type="Node"]
script = ExtResource( 3 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Score" type="Label" parent="CanvasLayer"]
visible = false
anchor_left = 0.5
anchor_right = 0.5
margin_left = -32.0
margin_top = 40.0
margin_right = 43.0
margin_bottom = 67.0
custom_fonts/font = SubResource( 6 )
text = "SCORE"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreTxt" type="Label" parent="CanvasLayer/Score"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -9.0
margin_top = 32.0
margin_right = 9.0
margin_bottom = 89.0
rect_pivot_offset = Vector2( 9, 0 )
custom_fonts/font = SubResource( 7 )
text = "0
"

[node name="Control" type="Control" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameOver" type="Popup" parent="CanvasLayer/Control"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="CanvasLayer/Control/GameOver"]
self_modulate = Color( 1, 1, 1, 0.254902 )
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Control/GameOver"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 20
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameOverTxt" type="Label" parent="CanvasLayer/Control/GameOver/VBoxContainer"]
margin_top = 59.0
margin_right = 320.0
margin_bottom = 73.0

[node name="BestScore" type="Label" parent="CanvasLayer/Control/GameOver/VBoxContainer"]
margin_top = 93.0
margin_right = 320.0
margin_bottom = 120.0
custom_fonts/font = SubResource( 4 )
text = "BEST SCORE"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BestScoreTxt" type="Label" parent="CanvasLayer/Control/GameOver/VBoxContainer"]
margin_top = 140.0
margin_right = 320.0
margin_bottom = 197.0
rect_pivot_offset = Vector2( 15, 0 )
custom_fonts/font = SubResource( 3 )
text = "100
"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score" type="Label" parent="CanvasLayer/Control/GameOver/VBoxContainer"]
margin_top = 217.0
margin_right = 320.0
margin_bottom = 270.0
custom_fonts/font = SubResource( 1 )
text = "SCORE"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreTxt" type="Label" parent="CanvasLayer/Control/GameOver/VBoxContainer"]
margin_top = 290.0
margin_right = 320.0
margin_bottom = 399.0
rect_min_size = Vector2( 320, 64 )
rect_pivot_offset = Vector2( 9, 0 )
custom_fonts/font = SubResource( 8 )
text = "10
"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="restart" type="Button" parent="CanvasLayer/Control/GameOver/VBoxContainer"]
margin_left = 104.0
margin_top = 419.0
margin_right = 216.0
margin_bottom = 461.0
rect_min_size = Vector2( 112, 42 )
size_flags_horizontal = 4
size_flags_vertical = 0
custom_fonts/font = SubResource( 5 )
text = "RETRY"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="CanvasLayer" parent="."]
layer = -10

[node name="TextureRect" type="TextureRect" parent="Background"]
margin_left = -96.0
margin_right = 160.0
margin_bottom = 256.0
rect_scale = Vector2( 2, 2 )
texture = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Node2D" type="Node2D" parent="."]

[node name="Ground" type="Node2D" parent="Node2D"]

[node name="Ground" parent="Node2D/Ground" instance=ExtResource( 4 )]

[node name="Ground2" parent="Node2D/Ground" instance=ExtResource( 4 )]
position = Vector2( 0, 513 )
scale = Vector2( 1, -1 )

[node name="Map" type="Node2D" parent="Node2D"]

[node name="StaticBody2D" type="StaticBody2D" parent="Node2D/Map"]

[node name="TileMap" type="TileMap" parent="Node2D/Map/StaticBody2D"]
rotation = 1.5708
tile_set = ExtResource( 1 )
cell_size = Vector2( 32, 16 )
show_collision = true
collision_use_parent = true
format = 1
tile_data = PoolIntArray( -131065, 0, 0, 7, 1, 0, 65543, 1, 0, 131079, 2, 0 )

[node name="SpawnPoint" type="Position2D" parent="Node2D/Map"]
position = Vector2( 384, 0 )

[node name="player" parent="Node2D" instance=ExtResource( 2 )]
position = Vector2( 23, 216 )

[connection signal="pressed" from="CanvasLayer/Control/GameOver/VBoxContainer/restart" to="." method="_on_restart_pressed"]
[connection signal="player_dead" from="Node2D/player" to="." method="game_over"]
